Finished Results section
Former-commit-id: 02c1470ed99fec7c283f9358e43cf70249f9143c

--- a/Write_Up/discussion.tex
+++ b/Write_Up/discussion.tex
@@ -4,4 +4,9 @@ Mosquito-borne disease transmission is dependent on both natural and human envir
 
 Aggregation of precipitation will lose the importance of quick torrential rains likely to flush immature mosquitoes \citep{Koenraadt2008}
 
-Even if monthly aggregated data captures more of the variation, we're talking aggregation not surveillence protocol. Studies have shown lower sampling error when doing more frequent (1/week) sampling versus less frequent but more sampling (2/fortnight) \citep{MagbityLines2002}
+Even if monthly aggregated data captures more of the variation, we're talking aggregation not surveillance protocol. Studies have shown lower sampling error when doing more frequent (1/week) sampling versus less frequent but more sampling (2/fortnight) \citep{MagbityLines2002}
+
+%Precipitation could have mixed effects on mosquito abundance dynamics. Precipitation raises near-surface humidity, which increases adult mosquito activity and host-seeking behaviour \citep{Shaman2007}. This increased reproductive activity would lead to lagged effects on mosquito abundance, but would also cause immediate increases in mosquito trap counts. Many trap types are designed to attract host-seeking or gravid females and are consequently also attractive to mate-seeking male mosquitoes \citep{Li2016}. Rainfall also affects many of the aquatic habitats important for early life stages \citep{Shaman2007}. Container-breeding species that use man-made containers for oviposition may experience increased breeding sites when precipitation creates habitats in otherwise dry containers \citep{Keith2005}. Precipitation can also expand suitable habitats for mosquitoes breeding in natural water bodies \citep{Koenraadt2008}. While some rainfall seems likely to have positive effects on mosquito abundance, the effect of heavy rainfall is less clear. Heavy rainfall can flush immature mosquitoes from aquatic habitats, but the extent of this effect varies among species \citep{Koenraadt2008, Paaijmans2007}. For example, specialist container-breeding \textit{Aedes aegypti} has been found to have a stronger protective diving response to rainfall compared to generalist habitat breeding \textit{Culex pipiens} \citep{Koenraadt2008}. %\textbf{Add sentence about changing (increasing) precipitation with climate change}.
+
+% see Chaves et al 2019 for limitation ideas
+% simplistic choice of variable- may be different for different species \citep{Pol2016, Holloway2018}
