--- a/Write_Up/introduction.tex
+++ b/Write_Up/introduction.tex
@@ -7,27 +7,22 @@
 At the end of the 20th century, the world experienced a global resurgence of vector-borne disease \citep{Gubler}. Diseases that had been well-controlled in the early-to-mid 1900s surged under complacent public health policies and insufficient research funding \citep{Gubler1998}. %Many of these diseases also emerged in novel geographic areas \citep{Gratz1999}. 
 Today, vector-borne diseases represent 17\% of the total global infectious disease burden and cause millions of deaths annually. Mosquito-borne diseases, such as malaria, dengue, Zika, yellow fever, West Nile virus, and chikungunya, singularly infect more than an estimated 200 million individuals worldwide every year \citep{WHOreport}. 
 
-Surveillance of mosquito populations is a successful method to control the public health impacts of vector-borne disease \citep{Vazquez-Prokopec2010}. Intervention in growing populations through chemical control measures can effectively reduce disease incidence \citep{Tomerini2011}. Sampling methods are, however, often limited by resource constraints \citep{Sedda2019}. Many studies have attempted to develop early warning models of disease incidence through prediction, rather than surveillance, of mosquito abundance \citep{Beck-Johnson2013, Li2019, Poh2019}. Predictive models of mosquito abundance could offer a cost-effective strategy with which to plan control measures \citep{Yang2009}.  In order to understand the potential of applying early warning models of disease incidence to resource-poor sites, greater investigation is needed into optimal methodologies of vector abundance models across locations and species. 
+Surveillance of mosquito populations is a successful method to control the public health impacts of vector-borne disease \citep{Vazquez-Prokopec2010}. Intervention in growing populations through chemical control measures can effectively reduce disease incidence \citep{Tomerini2011}. Sampling methods are, however, often limited by resource constraints \citep{Sedda2019}. Many studies have attempted to develop early warning models of disease incidence through prediction, rather than surveillance, of mosquito abundance \citep{Beck-Johnson2013, Li2019, Poh2019}. Because localised arbovirus disease data is often lacking in quality, mosquito abundance models can offer an alternative method to estimate disease risk \citep{Lowe2013}. Predictive models of mosquito abundance could also offer a cost-effective strategy with which to plan control measures \citep{Yang2009}.  
+%In order to understand the potential applications of early warning mosquito abundance models, greater investigation is needed into optimal methodologies of vector abundance models across locations and species. 
 %. 
 
-Mosquito abundances are affected by many factors, including land-use, elevation, and vegetation cover, but meteorological variables, such as temperature and precipitation, are particularly predictive of population dynamics and commonly used in abundance models \citep{Trawinski2008,Li 2019Wang2011,Yoo2016}. 
+Mosquito abundances are affected by many factors, including land-use, elevation, and vegetation cover, but meteorological variables, such as temperature and precipitation, are particularly predictive of population dynamics and commonly used in abundance models \citep{Trawinski2008, Li2019, Wang2011, Yoo2016}. The effects of temperature on mosquitoes are well characterised. As ectotherms, mosquito life history traits such as development rate, biting rate, fecundity, and survival, are temperature dependent and vary with changing temperatures \citep{Mordecai2019}. With increasing temperature, trait performance will increase until an optimal temperature is reached, after which, trait performance decreases according to physiological constraints \citep{Amarasekare2012}. Because these traits shape reproductive output, trait variation determines abundance of mosquito populations \citep{Cator2020}. Precipitation affects mosquitoes in more complex ways. Rainfall can create larval habitats in man-made containers or expand natural pooled breeding habitats \citep{Keith2005, Koenraadt2008}. Inter-seasonal variability in larval carrying capacity, which is dependent on rainfall for habitat creation, has been shown to be a main driver of mosquito abundances \citep{Marini2016}. Heavy rainfall, however, can flush immature mosquitoes from aquatic habitats, but the extent of this effect varies among species \citep{Koenraadt2008, Paaijmans2007}. The effect of droughts on abundance is mixed; in some cases, drought is thought to benefit mosquito abundance by eliminating predators of larvae in drying water bodies \citep{Chase2003}. Other research have found that droughts simply increase sample collection, rather than true abundance of mosquitoes \citep{Shaman2002}. In light of projected increases in extreme weather events such as increased heavy rainfall frequency, droughts, and warming temperatures in this century due to climate change, it is vital that the complex effects of temperature and precipitation on vector populations. \citep{Seneviratne2012}.
 
-Precipitation could have mixed effects on mosquito abundance dynamics. Precipitation raises near-surface humidity, which increases adult mosquito activity and host-seeking behaviour \citep{Shaman2007}. This increased reproductive activity would lead to lagged effects on mosquito abundance, but would also cause immediate increases in mosquito trap counts. Many trap types are designed to attract host-seeking or gravid females and are consequently also attractive to mate-seeking male mosquitoes \citep{Li2016}. Rainfall also affects many of the aquatic habitats important for early life stages \citep{Shaman2007}. Container-breeding species that use man-made containers for oviposition may experience increased breeding sites when precipitation creates habitats in otherwise dry containers \citep{Keith2005}. Precipitation can also expand suitable habitats for mosquitoes breeding in natural water bodies \citep{Koenraadt2008}. While some rainfall seems likely to have positive effects on mosquito abundance, the effect of heavy rainfall is less clear. Heavy rainfall can flush immature mosquitoes from aquatic habitats, but the extent of this effect varies among species \citep{Koenraadt2008, Paaijmans2007}. For example, specialist container-breeding \textit{Aedes aegypti} has been found to have a stronger protective diving response to rainfall compared to generalist habitat breeding \textit{Culex pipiens} \citep{Koenraadt2008}. %\textbf{Add sentence about changing (increasing) precipitation with climate change}.
+Both mechanistic models and statistical models have been used to investigate the impact of climate on mosquito abundance \citep{Ahumada2004, Cailly2012, Yoo2016, Wang2011}. Mechanistic models based on trait responses to climate conditions may allow for longer term and more generalisable forecasting \citep{Cator2020}. The complexity of the relationship between precipitation and mosquito life history, however, complicates the inclusion of this important abundance driver in mechanistic models. Statistical models, on the other hand, can be useful for understanding the explanatory power of drivers \citep{Mordecai2019}. Mosquito abundances have been described phenomenologically by harmonic models, time series ARIMA models, Generalised Linear Models (GLMs), and Generalised Additive Models (GAMs) \citep{Li2019, Trawinski2008, Wang2011, Yoo2016}. GAMs have been used to capture complex and non-linear relationships between climate and abundance as linear models are likely to overestimate the effect of temperature on mosquito abundance at high temperatures \citep{Li2019, Roiz2014, Xu2017}. The inclusion of first-order auto-regressive terms in analysis can perform well to capture density dependent effects.Temporally lagged meteorological variables are typically incorporated. Capture biological mechanisms underpinning abundances such as the time-delayed effect of larval habitat creation from rainfall or the increase in biting rate of female mosquitoes. Some models incorporate autoregressive effects, but these make prediction more difficult.
 	
-Cover:
-- temperature effects
-- lags
-- GAMS
-- non-linear relationship between climate and mosquito abundance \citep{Roiz2014}
+In this investigation I am using a wide variety of species across locations where most research has studied single species, single location. This allows me to investigate the generalisability of the characterisation of the drivers of mosquito abundance across geographies and in many species.
+
+I am using data from Florida. Florida has nasty bugs like this one this one and this one and many counties with comprehensive mosquito surveillance. Data is normally limited and no one else has looked at different time scales. With this shiny wonderful great data I will be able to answer the following questions:
 
 \subsubsection{Gaps}
 - many species/locations
 - use of autoregressive term or not
 %Previous research has found t-1 autoregressive terms to be significantly associated with mosquito abundance \cite{Poh2019}(1 month), \citep{Xu2017} (1 month), 
-
-- different temporal resolutions (so far restricted)
-- lag determination across species/location
-
 
 \subsubsection{Novelty of Research}
 
@@ -55,7 +50,7 @@ assessing practical application by comparing predictive power of autoregressive 
 
 	\item \textbf{Which level of temporal resolution of temperature and precipitation data is best able to predict mosquito abundances?}
 	
-	\item \textbf{To what extent can species-specific abundance models be predictive at multiple locations?}
+	\item \textbf{How consistently can temporal lags and meteorological variable significance be characterised for species specific abundance models across multiple locations?}
 	
 	\item \textbf{How does incorporation of an auto-regressive term affect the predictive ability of temperature and precipitation driven models of mosquito abundance?}
 \end{enumerate}
